# git-bash-aliases

./: CMakeLists.txt  LICENSE  Makefile  README.md  git-bash-aliases.bash
.github/workflows/: cd.yaml
